# RostelecomTestTask

./: README.md
rostelecom_test_task/: pyproject.toml
rostelecom_test_task/rostelecom_test_task/: DataParser.py  HTMLParserRialcom.py  example.xlsx  main.py  run.bat
